--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 /* -------  General Styles ------- */
-
 body {
   font-family: "Lato", sans-serif;
 }
@@ -19,6 +18,7 @@ h3 {
 p {
   line-height: 1.5em;
   margin: 0;
+  font-size: 20px;
 }
 
 section {
@@ -28,17 +28,28 @@ section {
 section.alternate-background {
   background-color: #00a699;
   color: #fff;
+  font-size: 20px;
 }
 
 main img {
-  width: 100px;
+  width: 100%;
 }
 
-/* ---  Groups & Items --- */
+/*style the images separately and text with a class of their own each
 
-.group {
+/* ---  Groups & Items --- */
+.about-group {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  border: 5px solid gold;
+}
+
+.stay-group {
+  display: flex;
+  justify-content: space-between;
+  align-items: space-between;
+  border: 5px solid gold;
 }
 
 .item {
@@ -50,18 +61,34 @@ main img {
   flex: 2;
 }
 
+.text-right {
+  text-align: left;
+  align-items: center;
+}
+
+
+
 /* -------  Navigation ------- */
 
 header {
   background-color: #ff385c;
-  padding: 20px 20px 0 20px;
-  text-align: center;
+  padding: 0 30px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+header nav ul{
+  display: flex;
+  padding-left: 0;
+  font-size: 25px;
 }
 
 .logo {
   font-family: "Pangolin", cursive;
   font-size: 72px;
   color: #fff;
+  padding-top: 20px;
 }
 
 header nav ul li {
@@ -83,10 +110,16 @@ header nav ul li a:hover {
 form {
   border: 2px solid #ff385c;
   padding: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
+
 form label {
+  display: block;
   font-weight: bold;
+  width: 40%;
 }
 
 form select,
@@ -101,7 +134,6 @@ form button {
   color: #fff;
   font-size: 24px;
   padding: 15px;
-  width: 100%;
 }
 
 /* -------  Footer ------- */
@@ -117,3 +149,46 @@ footer p {
 }
 
 /* -------  Media Query ------- */
+/*mobile setup*/
+@media all and (max-width: 600px) {
+header {
+  display: flex;
+  flex-direction: column;
+}
+
+.about-group {
+  display: flex;
+  flex-direction: column;
+}
+
+ header nav {
+    font-size: 20px;
+    display: flex;
+    justify-content: space-around;
+  }
+
+  header nav ul {
+    display: flex;
+    padding-left: 0px;
+  }
+
+  form {
+    display: flex;
+    flex-direction: column;
+  }
+
+  form button {
+    width: 100%;
+  }
+
+  form label {
+    width: 280px;
+    display: inline-block;
+    font-size: 20px;
+  }
+
+  main img {
+    width: 100%;
+    padding-bottom: 20px;
+  }
+}
