minor changes, no success on images

--- a/style.css
+++ b/style.css
@@ -31,9 +31,9 @@ section.alternate-background {
   font-size: 20px;
 }
 
-main img {
+/*main img {
   width: 100%;
-}
+}*/
 
 /*style the images separately and text with a class of their own each
 
@@ -42,19 +42,17 @@ main img {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border: 5px solid gold;
 }
 
 .stay-group {
   display: flex;
-  justify-content: space-between;
-  align-items: space-between;
-  border: 5px solid gold;
+  
 }
 
 .item {
   flex: 1;
   margin: 10px;
+  width: 100%;
 }
 
 .item-double {
