--- a/style.css
+++ b/style.css
@@ -31,9 +31,9 @@ section.alternate-background {
   font-size: 20px;
 }
 
-/*main img {
+img {
   width: 100%;
-}*/
+}
 
 /*style the images separately and text with a class of their own each
 
@@ -46,17 +46,25 @@ section.alternate-background {
 
 .stay-group {
   display: flex;
-  
+  flex-direction: row;
+  width: 100%;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
 .item {
-  flex: 1;
-  margin: 10px;
   width: 100%;
+  margin: 10px;
+}
+
+.item-ideas {
+  width: 48%;
+  margin: 10px;
 }
 
 .item-double {
-  flex: 2;
+  flex: 50%;
+  margin: 10px;
 }
 
 .text-right {
@@ -146,6 +154,24 @@ footer p {
   padding: 20px;
 }
 
+.host {
+  display: flex;
+  justify-content: space-between;
+  width: 100%
+}
+
+.host-text {
+  width: 50%;
+  padding: 15px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.host-image {
+  width: 50%;
+}
+
 /* -------  Media Query ------- */
 /*mobile setup*/
 @media all and (max-width: 600px) {
@@ -180,13 +206,46 @@ header {
   }
 
   form label {
-    width: 280px;
-    display: inline-block;
     font-size: 20px;
+    width: 50%;
+  }
+
+  form input, select {
+    border: 2px solid gray;
+    font-size: 20px;
+    border-radius: 5px;
+    width: 60%;
+    min-width: 60%;
+  }
+
+  .wrapper {
+    display: flex;
+    justify-content: space-between;
+    width: 100%
   }
 
   main img {
     width: 100%;
     padding-bottom: 20px;
   }
+
+  .item-ideas {
+    width: 100%;
+  }
 }
+
+.host {
+  flex-direction: column;
+  
+}
+
+.host-text {
+  width: 100%;
+}
+
+.host-image {
+  width: 100%;
+}
+
+
+
