updated final submission

--- a/style.css
+++ b/style.css
@@ -174,7 +174,7 @@ footer p {
 
 /* -------  Media Query ------- */
 /*mobile setup*/
-@media all and (max-width: 600px) {
+@media all and (max-width: 768px) {
 header {
   display: flex;
   flex-direction: column;
@@ -215,7 +215,11 @@ header {
     font-size: 20px;
     border-radius: 5px;
     width: 60%;
-    min-width: 60%;
+    min-width: 50%;
+  }
+
+  .select {
+    min-width: 55%;
   }
 
   .wrapper {
