--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 /* -------  General Styles ------- */
 body {
   font-family: "Lato", sans-serif;
+  width: 100%;
 }
 
 h2 {
@@ -31,9 +32,7 @@ section.alternate-background {
   font-size: 20px;
 }
 
-img {
-  width: 100%;
-}
+
 
 /*style the images separately and text with a class of their own each
 
@@ -42,6 +41,7 @@ img {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  width: 90%;
 }
 
 .stay-group {
@@ -54,12 +54,12 @@ img {
 }
 
 .item {
-  width: 100%;
+  max-width: 10%;
   margin: 10px;
 }
 
 .item-ideas {
-  max-width: 100;
+  max-width: 48%;
   margin: 10px;
 }
 
@@ -120,7 +120,7 @@ form {
   display: flex;
   justify-content: space-between;
   align-items: center;
-flex-wrap: wrap;
+  flex-wrap: wrap;
 }
 
 
@@ -159,7 +159,9 @@ footer p {
 .host {
   display: flex;
   justify-content: space-between;
-  width: 100%
+  width: 100%;
+  border: solid;
+  margin-right: 25px;
 }
 
 .host-text {
