Revert "tested in chrome and safari - form does not over hang web page"
This reverts commit 9d585cbdea525868d64baa27cba0469950316a7d.

--- a/style.css
+++ b/style.css
@@ -36,6 +36,8 @@ section.alternate-background {
 
 /*style the images separately and text with a class of their own each
 
+/*style the images separately and text with a class of their own each
+
 /* ---  Groups & Items --- */
 .about-group {
   display: flex;
