--- a/style.css
+++ b/style.css
@@ -31,8 +31,9 @@ section.alternate-background {
   font-size: 20px;
 }
 
-img {
-width: 100%;
+main img {
+width: 250px;
+height: 175px;
 }
 
 /*style the images separately and text with a class of their own each
@@ -55,7 +56,6 @@ width: 100%;
 }
 
 .item {
-  max-width: 25%;
   margin: 10px;
 }
 
@@ -72,6 +72,12 @@ width: 100%;
 .text-right {
   text-align: left;
   align-items: center;
+}
+
+.item-pictures {
+  width: 90%;
+  height: 90%;
+  
 }
 
 
@@ -185,6 +191,16 @@ header {
   flex-direction: column;
 }
 
+.item-pictures {
+  width: 100%;
+  height: 100%;
+}
+
+main img {
+  width: 100%;
+  height: 100%;
+}
+
 .about-group {
   display: flex;
   flex-direction: column;
@@ -229,10 +245,7 @@ header {
     width: 100%
   }
 
-  main img {
-    width: 100%;
-    padding-bottom: 20px;
-  }
+  
 
   .item-ideas {
     max-width: 100%;
